--- a/JavaScript Basics/index.html
+++ b/JavaScript Basics/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/main.css">
-  <title>The Story Maker</title>
+  <title>Let's Make a Function</title>
  </head>
 <body>
   <div class="container">
-  <h1>The Story Maker</h1>
-  <script src="story.js"></script>
+  <h1>Let's Make a Function</h1>
+   <script src="random.js"></script> 
   </div>
 </body>
 </html>
