--- a/Loop-Arrays-Objects/index.html
+++ b/Loop-Arrays-Objects/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Guess the Number</title>
+  <title>For Loop</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
-  <h1>Guess the Number</h1>
-  <script src="js/script.js"></script>
+<body id="color">
+<script src="js/for-loop.js"></script>
 </body>
 </html>
