--- a/Loop-Arrays-Objects/index.html
+++ b/Loop-Arrays-Objects/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Guess the Number via the Break Statement</title>
+  <title>Color Blocks - Refactor Challenge</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
-<script src="js/break-statement.js"></script>
+<body id="color">
+<script src="js/refactor.js"></script>
 </body>
 </html>
