--- a/Loop-Arrays-Objects/index.html
+++ b/Loop-Arrays-Objects/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JavaScript Quiz</title>
+  <title>Objects</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<h1>JavaScript Quiz</h1>
-<div id="output">
-
-</div>
-<script src="js/quiz.js"></script>
+<h1>Objects</h1>
+  <div id="listDiv"></div>
+<script src="js/object.js"></script>
 </body>
 </html>
