--- a/Loop-Arrays-Objects/index.html
+++ b/Loop-Arrays-Objects/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Objects</h1>
-  <div id="listDiv"></div>
+  <div id="output"></div>
 <script src="js/object.js"></script>
 </body>
 </html>
