--- a/Loop-Arrays-Objects/index.html
+++ b/Loop-Arrays-Objects/index.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<h1>Objects</h1>
-  <div id="output"></div>
+  <h1>Objects</h1>
+  <div id="objectDiv"></div>
 <script src="js/object.js"></script>
 </body>
 </html>
