--- a/Loop-Arrays-Objects/index.html
+++ b/Loop-Arrays-Objects/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Objects</title>
+  <title>JavaScript Quiz</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <h1>Objects</h1>
-  <div id="objectDiv"></div>
-<script src="js/object.js"></script>
+<h1>JavaScript Quiz</h1>
+<div id="output">
+
+</div>
+<script src="js/quiz.js"></script>
 </body>
 </html>
