--- a/Loop-Arrays-Objects/index.html
+++ b/Loop-Arrays-Objects/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JavaScript Quiz</title>
+  <title>Students</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<h1>JavaScript Quiz</h1>
-<div id="output">
-
-</div>
-<script src="js/quiz.js"></script>
+<h1>Students</h1>
+<div id="output"></div>
+<script src="js/students.js"></script>
+<!-- Link student_report.js after the students.js file -->
+<script src="js/student_report.js"></script>
 </body>
 </html>
