--- a/jQuery Basics/Spoiler Revealer/index.html
+++ b/jQuery Basics/Spoiler Revealer/index.html
@@ -8,7 +8,15 @@
   <img src="img/deathstar.png" />
   <p class="spoiler">
     <!--Spoiler:-->
-    <span>Darth Vader is Luke Skywalker's Father! Noooooooooooo!</span>
+    <span>Darth Vader is Luke Skywalker's Father!</span>
+  </p>
+  <p class="spoiler">
+    <!--Spoiler:-->
+    <span>Jar Jar Binks is the worst character ever!</span>
+  </p>
+  <p class="spoiler">
+    <!--Spoiler:-->
+    <span>Han Solo is Kylo Ren's Father!</span>
   </p>
   <script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/app.js" type="text/javascript" charset="utf-8"></script>
