--- a/jQuery Basics/Simple Lightbox/index.html
+++ b/jQuery Basics/Simple Lightbox/index.html
@@ -6,22 +6,22 @@
 </head>
 <body>
   <h1>Image Gallery</h1>
-  <ul>
-    <li><a href="images/refferal_machine.png"><img src="images/refferal_machine.png" width="100" alt="Refferal Machine By Matthew Spiel"></a></li>
-    <li><a href="images/space-juice.png"><img src="images/space-juice.png" width="100" alt="Space Juice by Mat Helme"></a></li>
-    <li><a href="images/education.png"><img src="images/education.png" width="100" alt="Education by Chris Michel"></a></li>
-    <li><a href="images/copy_mcrepeatsalot.png"><img src="images/copy_mcrepeatsalot.png" width="100" alt="Wanted: Copy McRepeatsalot by Chris Michel"></a></li>
-    <li><a href="images/sebastian.png"><img src="images/sebastian.png" width="100" alt="Sebastian by Mat Helme"></a></li>
-    <li><a href="images/skill-polish.png"><img src="images/skill-polish.png" width="100" alt="Skill Polish by Chris Michel"></a></li>
-    <li><a href="images/chuck.png"><img src="images/chuck.png" width="100" alt="Chuck by Mat Helme"></a></li>
-    <li><a href="images/library.png"><img src="images/library.png" width="100" alt="Library by Tyson Rosage"></a></li>
-    <li><a href="images/boat.png"><img src="images/boat.png" width="100" alt="Boat by Griffin Moore"></a></li>
-    <li><a href="images/illustrator_foundations.png"><img src="images/illustrator_foundations.png" width="100" alt="Illustrator Foundations by Matthew Spiel"></a></li>
-    <li><a href="images/treehouse_shop.jpg"><img src="images/treehouse_shop.jpg" width="100" alt="Treehouse Shop by Eric Smith"></a></li>
+  <ul id="imageGallery">
+    <li><a href="images/bears-close-left.jpg"><img src="images/bears-close-left.jpg" width="100" alt="Bears"></a></li>
+    <li><a href="images/boots-right-side.jpg"><img src="images/boots-right-side.jpg" width="100" alt="Boots"></a></li>
+    <li><a href="images/cat.png"><img src="images/cat.png" width="100" alt="Monorail Cat"></a></li>
+    <li><a href="images/chase-closeup.jpg"><img src="images/chase-closeup.jpg" width="100" alt="The Chase"></a></li>
+    <li><a href="images/helpinghand.jpg"><img src="images/helpinghand.jpg" width="100" alt="A Helping Hand"></a></li>
+    <li><a href="images/itch-front.jpg"><img src="images/itch-front.jpg" width="100" alt="The Itch"></a></li>
+    <li><a href="images/ole-reliable-closeup.jpg"><img src="images/ole-reliable-closeup.jpg" width="100" alt="Ole Reliable"></a></li>
+    <li><a href="images/patriot-left-side.jpg"><img src="images/patriot-left-side.jpg" width="100" alt="The Patriot"></a></li>
+    <li><a href="images/sevensisters.jpg"><img src="images/sevensisters.jpg" width="100" alt="Seven Sisters"></a></li>
+    <li><a href="images/survival-front.jpg"><img src="images/survival-front.jpg" width="100" alt="Survival"></a></li>
+    <li><a href="images/twister.jpg"><img src="images/twister.jpg" width="100" alt="Twister"></a></li>
   </ul>
   <script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/app.js" type="text/javascript" charset="utf-8"></script>
-  
+
 </body>
 </html>
 
