Creating Unchanging Variables With const

--- a/Variables via const and let/name.html
+++ b/Variables via const and let/name.html
@@ -5,10 +5,10 @@
   <body>
     <h1>Name</h1>
     <script>
-      name = "Andrew";
+      const name = "Andrew";
       
       function createFullName(fName, lName) {
-          name = fName + " " + lName;
+          const name = fName + " " + lName;
           console.log(name);
       }
       console.log(name);
