Creating Unchanging Variables With const

--- a/Variables via const and let/name.html
+++ b/Variables via const and let/name.html
@@ -9,9 +9,9 @@
       
       function createFullName(fName, lName) {
           const name = fName + " " + lName;
-          console.log(name);
+          console.log(name); // Joel Kraft
       }
-      console.log(name);
+      console.log(name); // Andrew
       createFullName("Joel", "Kraft");
     </script>
   </body>
