Defining a variable with 'let'

--- a/Variables via const and let/person.html
+++ b/Variables via const and let/person.html
@@ -11,12 +11,12 @@
         }
     
         function personDescription(person) {
-            var description = person.first_name;
+            let description = person.first_name;
             if(person.role) {
                 description = description + " is a ";
                 description = description + person.role;
             }
-            console.log(description);
+            console.log(description); // Andrew is a Teacher
         }
     
         personDescription(person);
