Using let with for Loops

--- a/Variables via const and let/buttons.html
+++ b/Variables via const and let/buttons.html
@@ -17,7 +17,7 @@
     <script>
       const buttons = document.getElementsByTagName("button");
       
-      for(var i = 0; i < buttons.length; i++) {
+      for(let i = 0; i < buttons.length; i++) {
           const button = buttons[i];
           button.addEventListener("click", function() {
               alert("Button " + i + " Pressed");
