--- a/JavaScript and the DOM/index.html
+++ b/JavaScript and the DOM/index.html
@@ -7,5 +7,6 @@
   <body>
     <h1 id="myHeading">JavaScript and the DOM</h1>
     <p>Making a web page interactive</p>
+    <script src="js/app.js"></script>
   </body>
 </html>
