--- a/JavaScript and the DOM/index.html
+++ b/JavaScript and the DOM/index.html
@@ -7,6 +7,8 @@
   <body>
     <h1 id="myHeading">JavaScript and the DOM</h1>
     <p>Making a web page interactive</p>
+    <input type="text" id="myTextInput">
+    <button id="myButton">Change Headline Color</button>
     <script src="js/app.js"></script>
   </body>
 </html>
