Using CSS Queries to Select Page Elements

--- a/JavaScript and the DOM/index.html
+++ b/JavaScript and the DOM/index.html
@@ -7,11 +7,14 @@
   <body>
     <h1 id="myHeading">JavaScript and the DOM</h1>
     <p>Making a web page interactive</p>
-    <p>Things that are purple:</p>
+    <p title="label">Things that are purple:</p>
     <ul>
       <li>grapes</li>
+      <li class="error-not-purple">oranges</li>
       <li>amethyst</li>
       <li>lavender</li>
+      <li class="error-not-purple">apples</li>
+      <li class="error-not-purple">bananas</li>
       <li>plums</li>
     </ul>
     <script src="js/app.js"></script>
