textContent and innerHTML

--- a/JavaScript and the DOM/index.html
+++ b/JavaScript and the DOM/index.html
@@ -6,15 +6,14 @@
   </head>
   <body>
     <h1 id="myHeading">JavaScript and the DOM</h1>
-    <p>Making a web page interactive</p>
-    <p title="label">Things that are purple:</p>
+    <p>Making a web page interactive</p>    
+    <p class="description">Things that are purple:</p>
+    <input type="text" class="description">
+    <button class="description">Change List Description</button>
     <ul>
       <li>grapes</li>
-      <li class="error-not-purple">oranges</li>
       <li>amethyst</li>
       <li>lavender</li>
-      <li class="error-not-purple">apples</li>
-      <li class="error-not-purple">bananas</li>
       <li>plums</li>
     </ul>
     <script src="js/app.js"></script>
