--- a/JavaScript and the DOM/index.html
+++ b/JavaScript and the DOM/index.html
@@ -6,16 +6,19 @@
   </head>
   <body>
     <h1 id="myHeading">JavaScript and the DOM</h1>
-    <p>Making a web page interactive</p>    
-    <p class="description">Things that are purple:</p>
-    <input type="text" class="description">
-    <button class="description">Change List Description</button>
-    <ul>
-      <li>grapes</li>
-      <li>amethyst</li>
-      <li>lavender</li>
-      <li>plums</li>
-    </ul>
+    <p>Making a web page interactive</p>
+    <button id="toggleList">Hide List</button> 
+    <div class="list">
+      <p class="description">Things that are purple:</p>
+      <input type="text" class="description">
+      <button class="description">Change List Description</button>
+      <ul>
+        <li>grapes</li>
+        <li>amethyst</li>
+        <li>lavender</li>
+        <li>plums</li>
+      </ul>
+    </div>
     <script src="js/app.js"></script>
   </body>
 </html>
