adding and removing nodes in the DOM

--- a/JavaScript and the DOM/index.html
+++ b/JavaScript and the DOM/index.html
@@ -12,12 +12,15 @@
       <p class="description">Things that are purple:</p>
       <input type="text" class="description">
       <button class="description">Change List Description</button>
-      <ul>
+      <ul class="list">
         <li>grapes</li>
         <li>amethyst</li>
         <li>lavender</li>
         <li>plums</li>
       </ul>
+      <input type="text" class="addItemInput">
+      <button class="addItemButton">Add Item</button>
+      <button class="removeItemButton">Remove Item</button>
     </div>
     <script src="js/app.js"></script>
   </body>
