--- a/JavaScript and the DOM/index.html
+++ b/JavaScript and the DOM/index.html
@@ -23,5 +23,6 @@
       <button class="removeItemButton">Remove Item</button>
     </div>
     <script src="js/app.js"></script>
+    <script src="js/temp.js"></script>
   </body>
 </html>
