--- a/JavaScript and the DOM/index.html
+++ b/JavaScript and the DOM/index.html
@@ -13,14 +13,25 @@
       <input type="text" class="description">
       <button class="description">Change List Description</button>
       <ul class="list">
-        <li>grapes</li>
-        <li>amethyst</li>
-        <li>lavender</li>
-        <li>plums</li>
+        <li>grapes
+          <button class="up">Move Up</button>
+          <button class="remove">Remove</button>
+        </li>
+        <li>amethyst
+          <button class="up">Move Up</button>
+          <button class="remove">Remove</button>
+        </li>
+        <li>lavender
+          <button class="up">Move Up</button>
+          <button class="remove">Remove</button>
+        </li>
+        <li>plums
+          <button class="up">Move Up</button>
+          <button class="remove">Remove</button>
+        </li>
       </ul>
       <input type="text" class="addItemInput">
       <button class="addItemButton">Add Item</button>
-      <button class="removeItemButton">Remove Item</button>
     </div>
     <script src="js/app.js"></script>
   </body>
