--- a/JavaScript and the DOM/index.html
+++ b/JavaScript and the DOM/index.html
@@ -15,18 +15,22 @@
       <ul class="list">
         <li>grapes
           <button class="up">Move Up</button>
+          <button class="down">Move Down</button>          
           <button class="remove">Remove</button>
         </li>
         <li>amethyst
           <button class="up">Move Up</button>
+          <button class="down">Move Down</button>
           <button class="remove">Remove</button>
         </li>
         <li>lavender
           <button class="up">Move Up</button>
+          <button class="down">Move Down</button>
           <button class="remove">Remove</button>
         </li>
         <li>plums
           <button class="up">Move Up</button>
+          <button class="down">Move Down</button>
           <button class="remove">Remove</button>
         </li>
       </ul>
